<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@color/WHITE"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:civ_border_color="@color/WHITE"
        app:civ_border_width="2dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/NAMELASTNAME"
        android:textSize="@dimen/NAMELASTNAME"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/civImage"
        app:layout_constraintTop_toTopOf="@+id/civImage"
        android:layout_margin="10dp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/tvDates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/civImage"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        android:layout_margin="10dp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/tvInformation"
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:layout_margin="5dp"
        android:paddingTop="10dp"
        android:text="@string/SAMPLE"
        android:textColor="@color/BLACK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civImage" />

    <Button
        android:id="@+id/btnDeleteItem"
        android:text="@string/DELETE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvInformation"
        tools:layout_editor_absoluteX="5dp" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EDIT"
        app:layout_constraintTop_toBottomOf="@+id/btnDeleteItem"
        tools:layout_editor_absoluteX="5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>